--- a/lmbkit/build.gradle
+++ b/lmbkit/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
 uploadArchives{
     repositories.mavenDeployer{
-        repository(url:"file:///D:/maven")
+        repository(url:"file:///D:/androidProjects/lmbkit")
         pom.groupId = "com.lmb.lmbkit"
         pom.artifactId = "lmbkit"
         pom.version = "1.0.0"
